# CMU

./: LitSummaries.docx  main.py  pyproject.toml
Module1/: ProjectCheckPoint01.docx
Module1/llm_comparisons_and_benchmarking_solution/: llm_comparisons_and_benchmarking_solution.ipynb
Module1/llm_comparisons_and_benchmarking_starter/: llm_comparisons_and_benchmarking_starter.ipynb
Module1/why_agents_need_tools_solution/: why_agents_need_tools_solution.ipynb
Module2/: ProjectCheckPoint02.docx
Module2/building_a_react_agent_solution/: building_a_react_agent_solution.ipynb
Module2/building_a_react_agent_starter/: building_a_react_agent_starter.ipynb
Module2/why_agents_need_tools_starter/: why_agents_need_tools_starter.ipynb
Module3/domain_specific_gpt_with_rag_and_open_source_llms_solution/: domain_specific_gpt_with_rag_and_open_source_llms_solution.ipynb
Module3/domain_specific_gpt_with_rag_and_open_source_llms_starter/: domain_specific_gpt_with_rag_and_open_source_llms_starter.ipynb
Module3/enhancing_rag_quality_with_maximal_marginal_relevance_solution/: enhancing_rag_quality_with_maximal_marginal_relevance_solution.ipynb
Module3/enhancing_rag_quality_with_maximal_marginal_relevance_starter/: enhancing_rag_quality_with_maximal_marginal_relevance_starter.ipynb
